--- a/a/index.html
+++ b/a/index.html
@@ -25,7 +25,7 @@
 <p>The biggest takeaway from this section is: limit is what the output approaches given the input is approaching a number. Moreover, because both the upper bound and the lower bound approach a number, we can think of the limit as a value that the function is supposed to be at a given x-coordinate, even if the function is undefined at that point.</p>
 
 <h3>Limit from different sides</h3>
-<p>The example above "squeezes" the x-axis from both sides but what if we have an equation like figure <a href="#fig-a3"></a>?</p>
+<p>The example above "squeezes" the x-axis from both sides but what if we have an equation like <a href="#fig-a3"></a>?</p>
 
 <p>No matter how hard you push the x-axis from two sides together, the y-axis limit will not get smaller. If we let $x$ approach from the left side (<b>negative side</b>) then the limit approaches $0$; if we let $x$ approach from the <b>positive side</b> then the limit approaches $1$. This is the situation we mentioned earlier about the upper bound and the lower bound creating a range instead of approaching one single number. In this case, we can only state what the limit approach as $x$ approaches from either side:
 \[
@@ -57,10 +57,10 @@ This leads us to the definition of <b>continuity</b>: if the limit of $f(x)$ at 
     </figure>
 </div>
 
-<p>Consider the function $f(x)=1/x^2$ in figure <a href="#fig-a1"></a>,  you can see that moving from both sides, the limit slowly becomes higher and higher. It seems like it is <b>unbounded</b> or the limit seems to reach <b>positive infinity</b>.
+<p>Consider the function $f(x)=1/x^2$ in <a href="#fig-a1"></a>,  you can see that moving from both sides, the limit slowly becomes higher and higher. It seems like it is <b>unbounded</b> or the limit seems to reach <b>positive infinity</b>.
 \[ \lim_{x\to0} \frac{1}{x^2} = \infty \]</p>
 
-<p>As you can see, both the upper limit and the lower limit still attempt to reach closer to one single value, so the limit still exists. Consider $f(x)=1/x$ in figure <a href="#fig-a4"></a>, we have the following:
+<p>As you can see, both the upper limit and the lower limit still attempt to reach closer to one single value, so the limit still exists. Consider $f(x)=1/x$ in <a href="#fig-a4"></a>, we have the following:
 \[
     \lim_{x\to0}\frac{1}{x} <b> does not exist, but</b>
 \]
@@ -109,7 +109,7 @@ The basic <b>limit theorems</b> are:
 \end{equation}
 These theorems can be deducted from the concept that limit is essentially substituting $a$ into our functions, so all standard number arithmetic still works just fine.</p>
 
-<p>From these theorems, you can see that <b>finding a finite limit</b> is simply doing algebra manipulation of the function until you reach a point where you can substitute $x$ into your equation. The typical procedure to solve a finite limit can be found in figure <a href="#fig-a5"></a>.
+<p>From these theorems, you can see that <b>finding a finite limit</b> is simply doing algebra manipulation of the function until you reach a point where you can substitute $x$ into your equation. The typical procedure to solve a finite limit can be found in <a href="#fig-a5"></a>.
 <figure>
     <img src="5.png" alt="Procedure to calculate limit, courtesy of Khan Academy.">
     <figcaption>Procedure to calculate limit, courtesy of Khan Academy.</figcaption>
@@ -118,7 +118,7 @@ These theorems can be deducted from the concept that limit is essentially substi
 <h4>Vertical asymptote</h4>
 <p>The tables in this section use $+$ simply to denote the fact that the number is $>0$ and similarly with the negative sign.</p>
 
-<p><b>The limit of the multiplication between two functions</b>, when it is at the asymptote, can be simplified in table <a href="#tab-a1"></a>. Remember that multiplication is commutative and check if the limit exists in the first place or not. The table is pretty straightforward, as the signs are similar to multiplication between two numbers: two negatives get a positive.</p>
+<p><b>The limit of the multiplication between two functions</b>, when it is at the asymptote, can be simplified in <a href="#tab-a1"></a>. Remember that multiplication is commutative and check if the limit exists in the first place or not. The table is pretty straightforward, as the signs are similar to multiplication between two numbers: two negatives get a positive.</p>
 <table id="tab-a1">
     <caption>Finding the limit of the multiplication between two functions</caption>
     <tr>
@@ -154,7 +154,7 @@ These theorems can be deducted from the concept that limit is essentially substi
     \text{ and }
     \lim_{x\to a}g(x) = 0
 \]
-After that, you need to check if the function $g(x)$ for $x$ approaches $a$ is larger than $0$ or not — you are checking the result that the whole function will dispense. The interaction between the limit of $f(x)$ and the sign of $g(x)$ can be found in table <a href="#tab-a2"></a>. Note that you still need to pay close attention to which direction you are approaching $x$ and whether the limit exists at that point. Once again the signs are similar to typical division. &infin;</p>
+After that, you need to check if the function $g(x)$ for $x$ approaches $a$ is larger than $0$ or not — you are checking the result that the whole function will dispense. The interaction between the limit of $f(x)$ and the sign of $g(x)$ can be found in <a href="#tab-a2"></a>. Note that you still need to pay close attention to which direction you are approaching $x$ and whether the limit exists at that point. Once again the signs are similar to typical division. &infin;</p>
 <table id="tab-a2">
     <caption>Interaction of the limit between two functions</caption>
     <tr>
@@ -196,7 +196,7 @@ After that, you need to check if the function $g(x)$ for $x$ approaches $a$ is l
     \sec\theta = \frac{1}{\cos\theta}
 \end{equation}</p>
 
-<p>Here are <b>Pythagorean identities</b>, which help when reviewing with a unit circle that displays trigonometric functions like figure <a href="#fig-a8"></a>:
+<p>Here are <b>Pythagorean identities</b>, which help when reviewing with a unit circle that displays trigonometric functions like <a href="#fig-a8"></a>:
 <figure>
     <img src="8.png" alt="A unit circle with trigonometric functions">
     <figcaption>A unit circle with trigonometric functions</figcaption>
@@ -264,7 +264,7 @@ then for some real number $a$:
 \end{equation}
 Read: If we certainly know that, inside the range we are evaluating, $h(x)$ is always between the other two functions, then if the limit of both $f(x)$ and $g(x)$ is equal to a number, then those two limits "sandwich" $h(x)$ to that same value.</p>
 
-<p>For example, we have the following function with the graph from figure <a href="#fig-a7"></a> and <a href="#fig-a6"></a>:
+<p>For example, we have the following function with the graph from <a href="#fig-a7"></a> and <a href="#fig-a6"></a>:
 \[ x^2 \sin\left( \frac{1}{x} \right) \]
 <div class="figure">
     <figure>
@@ -358,7 +358,7 @@ In the last step, we know that $e^x$ grows much more rapidly than $2$.</p>
     = \frac{y_2-y_1}{x_2-x_1}
 \end{equation}</p>
 
-<p>However, what we originally asked is the slope of a graph at one single point, therefore we need to move the two points as close as possible to each other (<i>the definition of limit</i>) until they are essentially one point similar to figure <a href="#fig-a10"></a>. Consider the fact that the y-axis essentially is the output of the function $f(x)$, making $\Delta y=f(x+\Delta x)-f(x)$, we can use limit to describe the fact that the difference $\Delta x$ is getting smaller and smaller ($\Delta x\to0$):
+<p>However, what we originally asked is the slope of a graph at one single point, therefore we need to move the two points as close as possible to each other (<i>the definition of limit</i>) until they are essentially one point similar to <a href="#fig-a10"></a>. Consider the fact that the y-axis essentially is the output of the function $f(x)$, making $\Delta y=f(x+\Delta x)-f(x)$, we can use limit to describe the fact that the difference $\Delta x$ is getting smaller and smaller ($\Delta x\to0$):
 <span class="label" id="eq-m3"></span>
 \begin{equation}
     f'(x)
@@ -446,7 +446,7 @@ This means the limit of a quotient of two functions equals the limit of the quot
 
 <h4>Visualizing the product rule</h4>
 <p>% Maybe someday change f(x) to y and df to dy. I won't change it right now because that means redrawing figure m11.
-Assume we have two functions: $g(x)$ and $h(x)$, and $f(x)=h\cdot g$. Because it is the multiplication between two functions, you can think of $f(x)$ as the area of a rectangle with $h(x)$ and $g(x)$ as two sides, similar to figure <a href="#fig-a11"></a>.
+Assume we have two functions: $g(x)$ and $h(x)$, and $f(x)=h\cdot g$. Because it is the multiplication between two functions, you can think of $f(x)$ as the area of a rectangle with $h(x)$ and $g(x)$ as two sides, similar to <a href="#fig-a11"></a>.
 <figure>
     <img src="11.png" alt="Representation of a product between two functions">
     <figcaption>Representation of a product between two functions</figcaption>
@@ -477,7 +477,7 @@ Because $dx\to0$, we can eliminate that term:
 <h4>Visualizing the chain rule</h4>
 <p>An anonymous professor once said: "Using the chain rule is like peeling an onion: you have to deal with each layer at a time, and if it is too big you will start crying."</p>
 
-<p>Assume we have $g(h(x))$. We can imagine these two functions like a production line: we put in the raw number $x$, and then the function $h$ will "process" the input before passing it to $g$, after which the output will then be given. This production chain can be visualized in figure <a href="#fig-a12"></a>. Note that now we denote a tiny change in our input as $dx$, a tiny change in our output as $dy$, and our ultimate goal is to find the ratio $dy/dx$.
+<p>Assume we have $g(h(x))$. We can imagine these two functions like a production line: we put in the raw number $x$, and then the function $h$ will "process" the input before passing it to $g$, after which the output will then be given. This production chain can be visualized in <a href="#fig-a12"></a>. Note that now we denote a tiny change in our input as $dx$, a tiny change in our output as $dy$, and our ultimate goal is to find the ratio $dy/dx$.
 <figure>
     <img src="12.png" alt="Chain rule visualization">
     <figcaption>Chain rule visualization</figcaption>
@@ -547,7 +547,7 @@ If you think of  $dg/dh$ as "derivative of $g$ when plugging in $h$", another in
 <p>Assume we have a graph $f(x)$ and an unknown function $A(x)$ that represents the area under $f(x)$ between the y-axis and the input. We will split into two situations and each situation will explain a different component of integration to construct the full image:</p>
 
 <h4>The main function is zero-degree (constant)</h4>
-<p>If we have $f(x)=c$, the graph of our constructed function will look like figure <a href="#fig-a13"></a>. If we were to find the area between $0$ and $a$, we could simply calculate $A(a)$ to get the result.
+<p>If we have $f(x)=c$, the graph of our constructed function will look like <a href="#fig-a13"></a>. If we were to find the area between $0$ and $a$, we could simply calculate $A(a)$ to get the result.
 <div class="figure">
     <figure>
         <img src="13.png" alt="A representation of a constant function's integral">
@@ -582,7 +582,7 @@ Then re-arrange the equation:
 Hang on... that essentially stated that the slope of $A(x)$ is the value of $f(x)$; on the other hand, it stated that essentially $f(x)$ is the derivative of $A(x)$! Despite $A(x)$ being unknown in the beginning, we can find a function whose derivative is $f(x)$ to get $A(x)$. Thus, the antiderivative is the area under the graph.</p>
 
 <h4>The main function is first-degree (linear)</h4>
-<p>Alright, we have seen the connection between $A(x)$ and $f(x)$, but where are the $\int$ sign and the final $dx$? Assume $f(x)$ is a linear equation with a graph similar to figure <a href="#fig-a14"></a>. Notice that now our area function will need to account for both the green rectangle and the pink triangle at the top of every rectangle.</p>
+<p>Alright, we have seen the connection between $A(x)$ and $f(x)$, but where are the $\int$ sign and the final $dx$? Assume $f(x)$ is a linear equation with a graph similar to <a href="#fig-a14"></a>. Notice that now our area function will need to account for both the green rectangle and the pink triangle at the top of every rectangle.</p>
 
 <p>If we want to find the area under $f(x)$ from $0$ to $a$, we will need to add the area of all of the slices between $0$ and $a$. The area of each green rectangle is $f(x) \;dx$ and we want to find the sum of all of those areas from $0$ to $a$:
 \[
@@ -666,7 +666,7 @@ Or, if we assume that capital $V=\int v\;dx$, we have:
     \int u v \; dx
     = uV - \int u' V \; dx
 \end{equation}
-You can take a look at figure <a href="#fig-a15"></a> for a visualization of the rule.
+You can take a look at <a href="#fig-a15"></a> for a visualization of the rule.
 <figure>
     <img src="15.png" alt="Integration by parts diagram, courtesy of Math is Fun">
     <figcaption>Integration by parts diagram, courtesy of Math is Fun</figcaption>
@@ -683,7 +683,7 @@ We can use $u$ as an input placeholder and compute our integral as:
     \int f(g(x) \cdot g'(x)) \;dx
     = \int f(u) \;du
 \end{equation}
-After that, solve the integral normally (remember the variable is now a placeholder $u$) before substituting $g(x)$ back into the equation. Use figure <a href="#fig-a17"></a> to assist you when setting up the equation.
+After that, solve the integral normally (remember the variable is now a placeholder $u$) before substituting $g(x)$ back into the equation. Use <a href="#fig-a17"></a> to assist you when setting up the equation.
 <figure>
     <img src="17.png" alt="Integration by substituting, courtesy of Math is Fun">
     <figcaption>Integration by substituting, courtesy of Math is Fun</figcaption>
@@ -725,7 +725,7 @@ Such a way of thinking will work, but as you can see, it is not accurate when yo
 
 <p>It is best to show the procedure as an example. Let's say we have the following integral:
 \[ \int x^3\sin x \;dx \]
-We identify $u=x^3$ and $v=\sin x$. Next, we set up the table <a href="#tab-a3"></a>. For every row on the $u$ column, we take a derivative of the previous row; similarly, we take the antiderivative for every $v$ row. For the sign, you can either denote it on the arrow, make a separate column for it, or negate the results in the $u$ column; the last row of the sign column was left empty as a reminder that you will not take the last derivative into the final result.</p>
+We identify $u=x^3$ and $v=\sin x$. Next, we set up the <a href="#tab-a3"></a>. For every row on the $u$ column, we take a derivative of the previous row; similarly, we take the antiderivative for every $v$ row. For the sign, you can either denote it on the arrow, make a separate column for it, or negate the results in the $u$ column; the last row of the sign column was left empty as a reminder that you will not take the last derivative into the final result.</p>
 <table id="tab-a3">
     <caption>Example of the tabular method's table</caption>
     <tr>
@@ -760,7 +760,7 @@ We identify $u=x^3$ and $v=\sin x$. Next, we set up the table <a href="#tab-a3">
     </tr>
 </table>
 
-<p>Take a look at figure <a href="#fig-a16"></a> and now look at what one should get as a result. It is easier to remember the method visually than a wordy description.
+<p>Take a look at <a href="#fig-a16"></a> and now look at what one should get as a result. It is easier to remember the method visually than a wordy description.
 \[\begin{aligned}
     \int x^3\sin x \;dx =
     &+ x^3 (-\cos x) \\
@@ -818,7 +818,7 @@ Replace $dx$ into our integral, we can see the $2x$ were cancelled out nicely, m
 \end{aligned}\]</p>
 
 <h3>Integral of common functions</h3>
-<p><b>The constant function</b> has a similar representation to the figure <a href="#fig-a13"></a> where the integral will increase the degree of a function. It is the power rule in equation (<a href="#eq-m4"></a>).
+<p><b>The constant function</b> has a similar representation to the <a href="#fig-a13"></a> where the integral will increase the degree of a function. It is the power rule in equation (<a href="#eq-m4"></a>).
 \begin{equation}
     \int a \;dx = ax + C
 \end{equation}
@@ -865,7 +865,7 @@ If you continue to expand the power rule, we will have an integral for <b>linear
     <li>A YouTube playlist by 3Blue1Brown to help with the visualization of constructing derivatives (as well as other calculus concepts): <a href="https://www.youtube.com/playlist?list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x">Essence of calculus</a></li>
     <li>An in-depth look into the proof and connection between derivatives and integrals: <a href="https://en.wikipedia.org/wiki/Fundamental_theorem_of_calculus">https://en.wikipedia.org/wiki/Fundamental_theorem_of_calculus</a></li>
     <li>The tabular method explanation video: <a href="https://www.youtube.com/watch?v=Yyic5aaXGaw">https://www.youtube.com/watch?v=Yyic5aaXGaw</a></li>
-    <li>A strongly worded flowchart to solve integrals can be found in figure <a href="#fig-a18"></a></li>
+    <li>A strongly worded flowchart to solve integrals can be found in <a href="#fig-a18"></a></li>
 
 </ul>
 <figure>
