--- a/c/index.html
+++ b/c/index.html
@@ -1,7 +1,7 @@
 <h2>Useful Figures and Formulas in Chemistry</h2>
 <p><b>The periodic table of the elements</b> is arguably one, if not, the most important thing to have when learning chemistry. For the high school level, the most useful periodic table is the one that has ion charges of the elements.</p>
 
-<p><b>A table of common symbols used in formulas</b> can be found in table <a href="#tab-c0"></a>
+<p><b>A table of common symbols used in formulas</b> can be found in <a href="#tab-c0"></a></p>
 <table id="tab-c0">
     <caption>A table of common symbols used in formulas</caption>
     <tr>
@@ -46,7 +46,7 @@
         <td>g/l</td>
         <td></td>
     </tr>
-</table></p>
+</table>
 
 <h3>Formulas</h3>
 <p>In this section, each name will followed by a reference to the equation (or the section) that explains the formula. There are no units included for the sake of memorization but you should always keep the unit in the back of your head, or better yet, remember the conversion factor procedure.</p>
@@ -200,7 +200,7 @@ We group orbitals from the same subshell by connecting the sides of the orbital 
 <quote>
     Every orbital in a sublevel is singly occupied before any orbital is doubly occupied.
 </quote>
-In simple terms demonstrated by figure <a href="#fig-c2"></a>, you should fill all the orbitals in the same subshell with electrons of the same spin (<i>in most cases</i>, up spin) before putting in the opposite spin.
+In simple terms demonstrated by <a href="#fig-c2"></a>, you should fill all the orbitals in the same subshell with electrons of the same spin (<i>in most cases</i>, up spin) before putting in the opposite spin.
 <figure>
     <img src="2.png" alt="How electrons fill the orbits from the 2p subshell">
     <figcaption>How electrons fill the orbits from the 2p subshell</figcaption>
@@ -214,7 +214,7 @@ Multiply the result by 2 and you get the number of electrons a subshell can hold
 <quote>
     When filling orbitals, the lowest energy orbitals available are always filled first.
 </quote>
-This principle is here to warn you of the fact that the subshell's energy level is not in order. Yes, the order <i>inside a shell</i> follows the basic order based on $l$; however, an example would be the subshell 4s has a lower energy level compared to the 3d subshell. This is a reminder that $n$ is simply to show you the <i>relative size</i> of the orbit (compared to a similarly shaped orbit) while $l$ is the shape — this is why the terminology "shell" is confusing in this case, as we tend to think they are orderly stacked but in fact, they are not (figure <a href="#fig-c3"></a>). Luckily, there is a trick to remember the energy level, presented in figure <a href="#fig-c4"></a>; the Aufbau principle starts to kick as we reach scandium, the first transition metal in the periodic table.
+This principle is here to warn you of the fact that the subshell's energy level is not in order. Yes, the order <i>inside a shell</i> follows the basic order based on $l$; however, an example would be the subshell 4s has a lower energy level compared to the 3d subshell. This is a reminder that $n$ is simply to show you the <i>relative size</i> of the orbit (compared to a similarly shaped orbit) while $l$ is the shape — this is why the terminology "shell" is confusing in this case, as we tend to think they are orderly stacked but in fact, they are not (<a href="#fig-c3"></a>). Luckily, there is a trick to remember the energy level, presented in <a href="#fig-c4"></a>; the Aufbau principle starts to kick as we reach scandium, the first transition metal in the periodic table.
 <figure>
     <img src="3.png" alt="Energy diagram for each subshell">
     <figcaption>Energy diagram for each subshell, courtesy of BYJUS</figcaption>
@@ -237,7 +237,7 @@ And just like any principle in chemistry, there are exceptions to the Aufbau pri
 </ul></p>
 
 <h3>Electron configuration</h3>
-<p>Taking from figure <a href="#fig-c1"></a>, lithium's electron configuration has 3 electrons on two separate subshells — we write the number of electrons per subshell as a superscript after the subshell's notation. If we have $x$ as the number of electrons in a subshell, the general format for a subshell's electron configuration is:
+<p>Taking from <a href="#fig-c1"></a>, lithium's electron configuration has 3 electrons on two separate subshells — we write the number of electrons per subshell as a superscript after the subshell's notation. If we have $x$ as the number of electrons in a subshell, the general format for a subshell's electron configuration is:
 \begin{equation}
     n\,l\,^x
 \end{equation}
