Auto numbering system

--- a/index.html
+++ b/index.html
@@ -193,12 +193,16 @@ subjects.forEach(async (subject) => {
     response = await response.text();
     subject.innerHTML = response;
 
+    // check images here so it can have subject
     subject.querySelectorAll('img').forEach(img => {
         let src = img.getAttribute('src');
         img.src = subject.getAttribute('subject') + '/' + src;
         src = src.split('.')[0];
         img.parentElement.id = `fig-${subject.getAttribute('subject')}${src}`;
     });
+    subject.querySelectorAll('note').forEach((note, id) => {
+        note.innerHTML = `[${id}]<span>${note.innerHTML}</span>`;
+    })
 
     subjectLoad();
 })
@@ -207,24 +211,70 @@ function subjectLoad() {
     subjectLoaded++
     if (subjectLoaded < subjects.length) return;
 
-    console.log('Checking links')
+    // check links here to cross-reference between subjects
+    console.log('Checking links');
     document.querySelectorAll('a').forEach(a => {
-        // reference
         let ref = a.getAttribute('href');
-        // assign link
-        a.innerText = a.innerText || ref.slice(1);
-        // return if not referencing local id
         if (!ref.startsWith('#')) return;
-        // check if reference exists
         if (!document.getElementById(ref.slice(1))) {
             a.parentElement.classList.add('error');
             a.parentElement.title = 'This paragraph contains broken link';
             console.log(a)
+            return;
         }
     });
-    document.querySelectorAll('note').forEach((note, id) => {
-        note.innerHTML = `[${id}]<span>${note.innerHTML}</span>`;
-    })
+
+    console.log('Assign numbering - figures');
+    let chapter = 0, count = 0,
+        allAs = document.querySelectorAll('a');
+    document.querySelectorAll('figure, h2:not([noNumber])').forEach(e => {
+        if (e.tagName === 'H2') { chapter++; count = 0; return; }
+        count++;
+        let ref = `Figure ${chapter}.${count}`,
+            caption = e.querySelector('figcaption');
+        caption.innerText = `${ref}: ${caption.innerText}`;
+        allAs.forEach(a => {
+            if (a.getAttribute('href') === `#${e.id}`) {
+                a.innerText = ref;
+            }
+        });
+    });
+
+    console.log('Assign numbering - tables');
+    chapter = 0, count = 0;
+    document.querySelectorAll('table, h2:not([noNumber])').forEach(e => {
+        if (e.tagName === 'H2') { chapter++; count = 0; return; }
+        count++;
+        let ref = `Table ${chapter}.${count}`,
+            caption = e.querySelector('caption');
+        caption.innerText = `${ref}: ${caption.innerText}`;
+        allAs.forEach(a => {
+            if (a.getAttribute('href') === `#${e.id}`) {
+                a.innerText = ref;
+            }
+        });
+    });
+
+    console.log('Assign numbering - labels');
+    chapter = 0, count = 0;
+    document.querySelectorAll('span.label, h2:not([noNumber])').forEach(e => {
+        if (e.tagName === 'H2') { chapter++; count = 0; return; }
+        count++;
+        allAs.forEach(a => {
+            if (a.getAttribute('href') === `#${e.id}`) {
+                a.innerText = `${chapter}.${count}`;
+            }
+        });
+    });
+
+    console.log('Assign numbering - sections')
+    document.querySelectorAll('h2:not([noNumber])').forEach(e => {
+        allAs.forEach(a => {
+            if (a.getAttribute('href') === `#${e.id}`) {
+                a.innerText = `Section "${e.innerText}"`;
+            }
+        });
+    });
 
     var script = document.createElement('script');
     script.src = 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js';
