--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
 
         <h1>Math</h1>
         <div subject="m"></div>
-        <!-- <div subject="a"></div> -->
+        <div subject="a"></div>
 
         <h1>Chemistry</h1>
-        <!-- <div subject="c"></div> -->
+        <div subject="c"></div>
 
         <h1>Physics</h1>
-        <!-- <div subject="p"></div> -->
+        <div subject="p"></div>
 
         <h1>Problems</h1>
         <p>Inspired by xkcd's What If, this part is here to show how very real math can solve real or unreal problems — it is here for your entertainment. The author understands that it will make the file a bit heavier with a mostly unused part, but it was here for a reason. Luke had a problem and because he was too lazy to create a different file, Luke decided to write the problem in this file with LaTeX. Then once again because Luke was too lazy, Luke decided that he would make it as a part and write a whole paragraph to justify instead of making a new file and deleting the notes. That is productivity at its peak.</p>
@@ -270,12 +270,20 @@ function subjectLoad() {
     document.querySelectorAll('eq, h2:not([noNumber])').forEach(e => {
         if (e.tagName === 'H2') { chapter++; count = 0; return; }
         count++;
+        // Create equation number
         e.innerHTML = `
             \\begin{equation*}\\begin{aligned} ${e.innerHTML} \\end{aligned}\\end{equation*}
             <span>(${chapter}.${count})</span>`;
-        if (e.id === '') return;
+
+        let id = e.id;
+        if (id === '') return;
+        if (e.parentElement.tagName == 'P') {
+            // move ID so user can see the introduction paragraph of the eq
+            e.id = '';
+            e.parentElement.id = id;
+        }
         allAs.forEach(a => {
-            if (a.getAttribute('href') === `#${e.id}`)
+            if (a.getAttribute('href') === `#${id}`)
                 a.innerText = `(${chapter}.${count})`;
         });
     });
